Add what you need sect

--- a/src/site/opening-ceremony.njk
+++ b/src/site/opening-ceremony.njk
@@ -247,3 +247,42 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
         </div>
     </section>
 
+
+    <!-- what you'll need section -->
+    <section class="simple-section">
+        <h2 class="sect-title pink-text">
+            What do you need to bring? 
+        </h2>
+        <div class="simple-section-text what-you-need-text">
+            <p class="normal-text fw-b">
+                Yourself!  That’s the only really essential thing.
+            </p>
+            <p class="normal-text">
+                But to optimise your sensory experience it would be ideal if you could bring:
+            </p>
+            <ul class="workshop-includes-list what-you-need-list normal-text">
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A piece of paper, pen and a bit string or ribbon or elastic band or hair tie</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A notebook or way to take notes</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">Your earphones</span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">A fragrant candle you like to burn </span>
+                </li>
+                <li class="workshop-includes-item">
+                    <i class="far fa-check-circle"></i>
+                    <span class="workshop-includes-item-text">Tea, coffee, water and/or snacks</span>
+                </li>
+            </ul>
+        </div>
+    </section>
+    <!-- END: what you'll need section -->
+
