Test snipcart button

--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -53,7 +53,15 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
                 </p>
             </div>
             <div class="about-cta-btn">
-                <a href="" class="btn-pink normal-text">Get your ticket</a>
+                <button class="btn-pink normal-text snipcart-add-item"
+                    data-item-id="#OC1"
+                    data-item-price="1"
+                    data-item-url="/opening-workshop"
+                    data-item-description="2021 Opening Workshop Ticket"
+                    data-item-image=""
+                    data-item-name="2021 Opening Workshop">
+                    Get your ticket
+                </button>
             </div>
         </div>
     </section>    
