--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -42,7 +42,7 @@
   'pages/services',
   'pages/contact',
   'pages/testimonials',
-  'pages/opening_ceremony';
+  'pages/opening_workshop';
 
 // 7. Themes
 @import
