Add snipcart buttons start js nav

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -59,6 +59,17 @@
                 <li class="nav-item rob-font"><a href="/services">Coaching Programs</a></li>
                 <li class="nav-item rob-font"><a href="/testimonials">Client Love</a></li>
                 <li class="nav-item rob-font"><a href="/contact">Let's Chat</a></li>
+                <li class="nav-item rob-font dropdown-nav">
+                    <button id="dropdown-btn" class="dropbtn rob-font">Events 
+                        <i class="fa fa-caret-down"></i>
+                    </button>
+                    <div id="dropdown-content" class="dropdown-content">
+                        <a href="#">Link 1</a>
+                        <a href="#">Link 2</a>
+                        <a href="#">Link 3</a>
+                    </div>
+                    {# <a href="/contact">Events</a> #}
+                </li>
                 <li class="nav-item rob-font">
                     <a class="snipcart-checkout">Cart
                         <span class="snipcart-total-price">£0.00</span>
