--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -55,7 +55,7 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
             <div class="about-cta-btn">
                 <button class="btn-pink normal-text snipcart-add-item"
                     data-item-id="#OC1"
-                    data-item-price="1"
+                    data-item-price="10"
                     data-item-url="/opening-workshop"
                     data-item-description="2021 Opening Workshop Ticket"
                     data-item-image=""
@@ -91,7 +91,15 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
             </p>
         </div>
         <div class="about-cta-btn">
-            <a href="" class="btn-pink normal-text">Get your ticket</a>
+            <button class="btn-pink normal-text snipcart-add-item"
+                data-item-id="#OC1"
+                data-item-price="10"
+                data-item-url="/opening-workshop"
+                data-item-description="2021 Opening Workshop Ticket"
+                data-item-image=""
+                data-item-name="2021 Opening Workshop">
+                Get your ticket
+            </button>
         </div>
     </section>
     <!-- END: get quiet section -->
@@ -129,7 +137,15 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
                 </ul>
             </div>
             <div class="about-cta-btn">
-                <a href="/about" class="btn-pink normal-text">Get your ticket</a>
+                <button class="btn-pink normal-text snipcart-add-item"
+                    data-item-id="#OC1"
+                    data-item-price="10"
+                    data-item-url="/opening-workshop"
+                    data-item-description="2021 Opening Workshop Ticket"
+                    data-item-image=""
+                    data-item-name="2021 Opening Workshop">
+                    Get your ticket
+                </button>
             </div>
         </div>
     </section>
@@ -185,7 +201,15 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
             </div>
         </div>
         <div class="about-cta-btn">
-            <a href="" class="btn-pink normal-text">Get your ticket</a>
+            <button class="btn-pink normal-text snipcart-add-item"
+                data-item-id="#OC1"
+                data-item-price="10"
+                data-item-url="/opening-workshop"
+                data-item-description="2021 Opening Workshop Ticket"
+                data-item-image=""
+                data-item-name="2021 Opening Workshop">
+                Get your ticket
+            </button>
         </div>
     </section>
     <!-- END: countdown timer section -->
@@ -251,7 +275,15 @@ metaDescription: 'Hear from the women who have transformed their lives, careers,
 
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
-            <a href="" class="btn-pink normal-text">JOIN ME FOR 2021 OPENING WORKSHOP </a>
+            <button class="btn-pink normal-text snipcart-add-item"
+                data-item-id="#OC1"
+                data-item-price="10"
+                data-item-url="/opening-workshop"
+                data-item-description="2021 Opening Workshop Ticket"
+                data-item-image=""
+                data-item-name="2021 Opening Workshop">
+                JOIN ME FOR 2021 OPENING WORKSHOP 
+            </button>
         </div>
     </section>
 
