Remove nav item and add snipcart lvie

--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -1,8 +1,8 @@
 ---
 
 layout: 'base.njk'
-title: 'Client Success Stories by Mhairi Todd - The Roadblock Coach'
-metaDescription: 'Hear from the women who have transformed their lives, careers, relationships and more by working with Mhairi Todd. Accredited Life Coach. DISC Certified.'
+title: '2021 Opening Workshop with Mhairi Todd - The Roadblock Coach'
+metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative Sound Bath. We will release what doesn’t serve you, call in what you need for 2021 and get clear on your next right move.'
 
 ---
 
