Add new images from mhairi

--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -7,9 +7,9 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
 ---
 
     <!-- Parralex hero section -->
-    <section class="testimonial-hero-container">
+    <section class="testimonial-hero-container workshop-hero">
         <div class="parallax-container contact-hero-parallax-window"></div>
-        <div class="right-hero-text">
+        <div class="left-hero-text">
             <h1 class="sect-title">2021 OPENING WORKSHOP</h1>
             <h2 class="sect-subtitle">With Mhairi Todd</h2>
         </div>
@@ -70,7 +70,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
     <hr class="half-width-hr">
 
     <div class="circle-img">
-        <img src="../static/img/Mhairi_pics/about-hero-square.jpg" alt="">
+        <img src="../static/img/Mhairi_pics/walking-out-door.jpg" alt="">
     </div>
 
     <!-- get quiet section -->
