--- a/static/scss/pages/_opening_workshop.scss
+++ b/static/scss/pages/_opening_workshop.scss
@@ -1,4 +1,19 @@
-.right-hero-text{
+.workshop-hero{
+    background-image: url(../img/Mhairi_pics/yellow-coat-fence.jpg);
+    background-position: 90% 40%;
+    background-attachment: scroll;
+    @media #{$breakpoint-min-md} {
+        background-position: 90% 0%;
+    }
+    
+    .parallax-container{
+        @media #{$breakpoint-min-lg} {
+            min-height: 22.5em;
+        }
+    }
+}
+
+.left-hero-text{
     color: white;
     position: absolute;
     bottom: 3em;
@@ -6,12 +21,12 @@
     margin-right: 1em;
 
     @media #{$breakpoint-min-md} {
-        right: 0;
+        left: 0;
         width: 20em;
         bottom: 1em;
     }
     @media #{$breakpoint-min-lg} {
-        right: 3em;
+        left: 3em;
         bottom: 2em;
     }
 
@@ -53,25 +68,30 @@
 }
 
 .ceremony-what-item{
-
+    
     &:nth-of-type(1){
         margin: 1em 0 3em 0;
     }
     margin: 3em 0;
+
 }
 
 .circle-img{
-    height: auto;
+    height: 21em;
     width: 21em;
     margin: 4em auto;
 
     @media #{$breakpoint-min-lg} {
         width: 18em;
+        height: 18em;
     }
 
     img{
         width: 100%;
+        height: 100%;
+        object-fit: cover;
         border-radius: 100%;
+        object-position: 50% 10%;
     }
 }
 
