Add drop down nav events

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -58,6 +58,12 @@
                 <li class="nav-item rob-font"><a href="/about">Meet Mhairi</a></li>
                 <li class="nav-item rob-font"><a href="/services">Coaching Programs</a></li>
                 <li class="nav-item rob-font"><a href="/testimonials">Client Love</a></li>
+                <div class="dropdown">
+                    <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
+                    <div class="dropdown-menu nav-item rob-font">
+                        <a href="/opening-workshop" class="dropdown-item">2021 Opening Workshop</a>
+                    </div>
+                </div>
                 <li class="nav-item rob-font"><a href="/contact">Let's Chat</a></li>
                 <li class="nav-item rob-font">
                     <a class="snipcart-checkout">Cart
