Add env for google site tage

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -2,15 +2,17 @@
 <html lang="en">
 <head>
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180198864-1"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
+    {% if my_project.environment === 'production' %}
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180198864-1"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
 
-    gtag('config', 'UA-180198864-1');
-    </script>
+        gtag('config', 'UA-180198864-1');
+        </script>
+    {% endif %}
 
    
 
