Add timer expire text

--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -53,7 +53,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                 </p>
             </div>
             <div class="about-cta-btn">
-                <button class="btn-pink normal-text snipcart-add-item"
+                <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
                     data-item-id="#OC1"
                     data-item-price="10"
                     data-item-url="/opening-workshop"
@@ -91,7 +91,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
             </p>
         </div>
         <div class="about-cta-btn">
-            <button class="btn-pink normal-text snipcart-add-item"
+            <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
@@ -137,7 +137,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                 </ul>
             </div>
             <div class="about-cta-btn">
-                <button class="btn-pink normal-text snipcart-add-item"
+                <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
                     data-item-id="#OC1"
                     data-item-price="10"
                     data-item-url="/opening-workshop"
@@ -201,7 +201,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
             </div>
         </div>
         <div class="about-cta-btn">
-            <button class="btn-pink normal-text snipcart-add-item"
+            <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
@@ -275,7 +275,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
 
     <section class="stand-alone-cta-btn">
         <div class="about-cta-btn max-content-width">
-            <button class="btn-pink normal-text snipcart-add-item"
+            <button class="btn-pink normal-text snipcart-add-item opening-workshop-btn"
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
