--- a/static/scss/components/_button.scss
+++ b/static/scss/components/_button.scss
@@ -70,6 +70,7 @@ a:focus{outline:0;}
     text-decoration: none;
     background-color: $pink;
     color: white;
+    border: none;
     height: 100%;
     position: relative;
     margin: auto;
