--- a/src/site/opening-workshop.njk
+++ b/src/site/opening-workshop.njk
@@ -57,7 +57,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                     data-item-id="#OC1"
                     data-item-price="10"
                     data-item-url="/opening-workshop"
-                    data-item-description="2021 Opening Workshop Ticket"
+                    data-item-description="2021 Opening Workshop - Replay"
                     data-item-image=""
                     data-item-name="2021 Opening Workshop">
                     Get your ticket
@@ -95,7 +95,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop Ticket"
+                data-item-description="2021 Opening Workshop - Replay"
                 data-item-image=""
                 data-item-name="2021 Opening Workshop">
                 Get your ticket
@@ -141,7 +141,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                     data-item-id="#OC1"
                     data-item-price="10"
                     data-item-url="/opening-workshop"
-                    data-item-description="2021 Opening Workshop Ticket"
+                    data-item-description="2021 Opening Workshop - Replay"
                     data-item-image=""
                     data-item-name="2021 Opening Workshop">
                     Get your ticket
@@ -205,7 +205,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop Ticket"
+                data-item-description="2021 Opening Workshop - Replay"
                 data-item-image=""
                 data-item-name="2021 Opening Workshop">
                 Get your ticket
@@ -279,7 +279,7 @@ metaDescription: 'A 1hr lecture style workshop followed by a 30 min restorative 
                 data-item-id="#OC1"
                 data-item-price="10"
                 data-item-url="/opening-workshop"
-                data-item-description="2021 Opening Workshop Ticket"
+                data-item-description="2021 Opening Workshop - Replay"
                 data-item-image=""
                 data-item-name="2021 Opening Workshop">
                 JOIN ME FOR 2021 OPENING WORKSHOP 
