Add new workshop CCW

--- a/src/site/includes/base.njk
+++ b/src/site/includes/base.njk
@@ -63,7 +63,12 @@
                 <div class="dropdown">
                     <a href="#" class="dropdown-toggle nav-item rob-font" data-toggle="dropdown">Events</a>
                     <div class="dropdown-menu nav-item rob-font">
-                        <a href="/opening-workshop" class="dropdown-item">2021 Opening Workshop</a>
+                        <div class="dropdown-item">
+                            <a href="/opening-workshop" class="">2021 Opening Workshop</a>
+                        </div>
+                        <div class="dropdown-item">
+                            <a href="/confidence-collective-workshop" class="">Confidence Collective <br class="d-lg-none"> Workshop</a>
+                        </div>
                     </div>
                 </div>
                 <li class="nav-item rob-font"><a href="/contact">Let's Chat</a></li>
