--- a/static/scss/pages/_home.scss
+++ b/static/scss/pages/_home.scss
@@ -1124,6 +1124,7 @@
             grid-column: 2/3;
             grid-row: 1/2;
             text-align: start;
+            align-self: center;
             margin: 0;
             padding: 0 0 0 1.5em;
         }
