--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1722,7 +1722,13 @@ footer {
 
 @media only screen and (min-width: 768px) {
   .simple-section {
-    padding: 2em 0;
+    padding: 2em 4em;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .simple-section {
+    padding: 2em 10em;
   }
 }
 
@@ -1884,6 +1890,32 @@ footer {
 
 .dropdown-toggle:hover {
   color: #3b403f;
+}
+
+.dropdown-menu {
+  width: 25em;
+}
+
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .dropdown-menu {
+    width: 28em;
+    position: absolute;
+    left: -89px;
+  }
+}
+
+@media only screen and (min-width: 1200px) {
+  .dropdown-menu {
+    width: 28em;
+    position: absolute;
+    left: -89px;
+  }
+}
+
+@media only screen and (min-width: 1200px), only screen and (min-width: 1600px) {
+  .dropdown-menu .dropdown-item {
+    padding: .25rem 1rem;
+  }
 }
 
 .nav-close {
@@ -4972,6 +5004,9 @@ input[type='checkbox'] {
     -ms-grid-row-span: 1;
     grid-row: 1/2;
     text-align: start;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     margin: 0;
     padding: 0 0 0 1.5em;
   }
@@ -9121,6 +9156,9 @@ input[type='checkbox'] {
     -ms-grid-row-span: 1;
     grid-row: 1/2;
     text-align: start;
+    -ms-flex-item-align: center;
+        -ms-grid-row-align: center;
+        align-self: center;
     margin: 0;
     padding: 0 0 0 1.5em;
   }
