--- a/static/scss/components/_navbar.scss
+++ b/static/scss/components/_navbar.scss
@@ -107,6 +107,28 @@ $nav-toggle-z-index: 2;
   }
 }
 
+.dropdown-menu{
+  width: 25em;
+
+  @media #{$breakpoint-lg} {
+    width: 28em;
+    position: absolute;
+    left: -89px;
+  }
+  @media #{$breakpoint-xl} {
+    width: 28em;
+    position: absolute;
+    left: -89px;
+  }
+
+  .dropdown-item{
+
+    @media #{$breakpoint-xl}, #{$breakpoint-xxl}{
+      padding: .25rem 1rem;
+    }
+  }
+}
+
 .nav-close{
   text-align: right;
   margin: 0;
