Add netlify code for confidence workshop

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -19,10 +19,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
     <!-- intro section -->
     <section class="services-intro testimonial-intro you-will-gain-section">
         <div class="home-sub-hero-content ceremony-sub-content">
-            <h1 class="sect-title about-title pink-text">RESTORE, RELEASE AND REVEAL</h1>
-            <h3 class="services-intro-subtitle rob-font">
-                Uncover your confidence in in a safe space.
-            </h3>   
+            <h1 class="sect-title about-title pink-text">Your first, right step towards unstoppable confidence </h1>
         </div>
         <hr class="half-width-hr">
         <div class="ceremony-what">
@@ -32,7 +29,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 </h4>
                 <p class="normal-text">
                     A 1hr ½ lecture style workshop.
-                    We will find your why, reframe the confidence killing narrative and start the journey to your most confident self. 
+                    Together we will reframe your confidence killing narrative and start the journey to your most confident self. 
                 </p>
             </div>
             <div class="ceremony-what-item">
@@ -80,13 +77,13 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
-                No I’ve not lost the plot babes (well no more than usual). The above is your route to confidence.  
+                No I’ve not lost the plot babes (well no more than usual). The above is your route to incredible self confidence.  
             </p>
             <p class="normal-text">
                 Low self confidence can impact us negatively in numerous ways.  One of the more insidious effects is how it kills our creativity and puts a pin in our dreams.
             </p>
             <p class="normal-text">
-                I’ve created this workshop as a wonderfully hopeful and incurably compassionate space for you to rediscover your desires.  Through practical tools and techniques you will start the process of coming home to the most confident version of you. 
+                I’ve created this workshop as a wonderfully hopeful and incurably compassionate space for you to rediscover you.  Through practical tools and techniques you will learn the essentials to come home to your most confident self.
             </p>
         </div>
         <div class="about-cta-btn">
@@ -118,7 +115,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 <ul class="workshop-includes-list normal-text">
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
-                        <span class="workshop-includes-item-text">We start with a short breathing technique to ground us in.</span>
+                        <span class="workshop-includes-item-text">We start with a short and useful breathing technique to ground us in.</span>
                     </li>
                     <li class="workshop-includes-item">
                         <i class="far fa-check-circle"></i>
@@ -225,7 +222,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">An appreciation and compassion for your confidence killing monologue and crucially a way to reframe that</span>
+                    <span class="workshop-includes-item-text">An awareness and compassion for your confidence killing monologue and crucially a way to reframe that</span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
@@ -237,7 +234,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">The first, right step to wards your most confident self </span>
+                    <span class="workshop-includes-item-text">The first, right step towards your most confident self </span>
                 </li>
             </ul>
         </div>
@@ -295,31 +292,6 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
             <p class="normal-text fw-b">
                 Yourself. An open mind and heart. A way to take notes. (Wine is optional)
             </p>
-            <p class="normal-text">
-                But to optimise your sensory experience it would be ideal if you could bring:
-            </p>
-            <ul class="workshop-includes-list what-you-need-list normal-text">
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">A piece of paper, pen and a bit string or ribbon or elastic band or hair tie</span>
-                </li>
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">A notebook or way to take notes</span>
-                </li>
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Your earphones</span>
-                </li>
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">A fragrant candle you like to burn </span>
-                </li>
-                <li class="workshop-includes-item">
-                    <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">Tea, coffee, water and/or snacks</span>
-                </li>
-            </ul>
         </div>
     </section>
     <!-- END: what you'll need section -->
