--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -7,9 +7,9 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
 ---
 
     <!-- Parralex hero section -->
-    <section class="testimonial-hero-container workshop-hero">
+    <section class="testimonial-hero-container cc-workshop-hero">
         <div class="parallax-container contact-hero-parallax-window"></div>
-        <div class="left-hero-text">
+        <div class="right-hero-text">
             <h1 class="sect-title">Confidence Collective Workshop</h1>
             <h2 class="sect-subtitle">With Mhairi Todd</h2>
         </div>
@@ -67,7 +67,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
     <hr class="half-width-hr">
 
     <div class="circle-img">
-        <img src="../static/img/Mhairi_pics/walking-out-door.jpg" alt="">
+        <img src="../static/img/Mhairi_pics/coat-pull-comp.jpg" alt="Mhairi-on-phone">
     </div>
 
     <!-- get quiet section -->
@@ -104,7 +104,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
     <section class="why-mhairi worksop-includes">
         <div class="why-mhairi-content workshop-includes-content">
             <div class="home-about-img">
-                <img src="../static/img/Mhairi_pics/sitting_yellow_coat_comp.jpg" alt="mhairi-life-coach-yellow-coat">
+                <img src="../static/img/Mhairi_pics/mhairi_on_phone.jpg" alt="mhairi-life-coach-on-phone">
             </div>
             <div class="why-mhairi-title pl-md-0">
                 <h3 class="home-about-subtitle fw-b">
