Add mhairi edit

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -73,14 +73,14 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
     <!-- get quiet section -->
     <section class="simple-section bg-gray">
         <h2 class="sect-title">
-            Begin at the end, start before your ready and allow yourself the freedom to fail.
+            Begin at the end, start before you're ready and allow yourself the freedom to fail.
         </h2>
         <div class="simple-section-text">
             <p class="normal-text">
                 No I’ve not lost the plot babes (well no more than usual). The above is your route to incredible self confidence.  
             </p>
             <p class="normal-text">
-                Low self confidence can impact us negatively in numerous ways.  One of the more insidious effects is how it kills our creativity and puts a pin in our dreams.
+                Low self confidence can impact us negatively in numerous ways.  One of the more insidious effects is how it dampens our creativity and puts a pin in our dreams.
             </p>
             <p class="normal-text">
                 I’ve created this workshop as a wonderfully hopeful and incurably compassionate space for you to rediscover you.  Through practical tools and techniques you will learn the essentials to come home to your most confident self.
@@ -290,7 +290,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
         </h2>
         <div class="simple-section-text what-you-need-text">
             <p class="normal-text fw-b">
-                Yourself. An open mind and heart. A way to take notes. (Wine is optional)
+                Yourself. An open mind and heart. A way to take notes. 
             </p>
         </div>
     </section>
