Add ie to includes

--- a/src/site/confidence-collective-workshop.njk
+++ b/src/site/confidence-collective-workshop.njk
@@ -218,7 +218,7 @@ metaDescription: 'A 1hr lecture style workshop. We will find your why, reframe t
             <ul class="workshop-includes-list normal-text">
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
-                    <span class="workshop-includes-item-text">A clear understanding of your why, your motivation for working on your confidence </span>
+                    <span class="workshop-includes-item-text">A clear understanding of your "why" ie., your motivation for working on your confidence </span>
                 </li>
                 <li class="workshop-includes-item">
                     <i class="far fa-check-circle"></i>
